--- a/index.html
+++ b/index.html
@@ -73,6 +73,31 @@
             <div id="topGrid" class="grid"></div>
         </section>
     </main>
+    <footer style="padding: 60px 0; border-top: 1px solid rgba(0,255,136,0.1); margin-top: 100px;">
+        <div class="container" style="display: grid; grid-template-columns: 1.5fr 1fr 1fr; gap: 40px; align-items: start;">
+            <div>
+                <h3 style="font-family: 'JetBrains Mono'; font-weight: 800; color: #fff; margin-bottom: 20px;">WILDAN<span style="color:var(--p)">_LABS</span></h3>
+                <p style="font-size: 0.85rem; color: #64748b; line-height: 1.6; max-width: 320px;">Eksperimen digital yang menggabungkan kecerdasan buatan, optimasi database, dan desain interaktif.</p>
+            </div>
+            <div>
+                <h4 style="font-family: 'JetBrains Mono'; color: var(--p); font-size: 0.8rem; margin-bottom: 15px;">// SYSTEM_DIAGNOSTICS</h4>
+                <ul style="list-style: none; font-family: 'JetBrains Mono'; font-size: 0.75rem; color: #94a3b8;">
+                    <li style="margin-bottom: 8px;"><span style="color:var(--p)">●</span> ENGINE: v1.0.5_STABLE</li>
+                    <li style="margin-bottom: 8px;"><span style="color:var(--p)">●</span> NODE: ID_WildanBaldi</li>
+                    <li><span style="color:var(--p)">●</span> LATENCY: 24ms</li>
+                </ul>
+            </div>
+            <div style="text-align: right;">
+                <div style="display: flex; justify-content: flex-end; gap: 20px; margin-bottom: 25px; font-size: 1.2rem; color: #94a3b8;">
+                    <a href="#" style="color: inherit;"><i class="fab fa-github"></i></a>
+                    <a href="#" style="color: inherit;"><i class="fab fa-instagram"></i></a>
+                    <a href="#" style="color: inherit;"><i class="fab fa-linkedin"></i></a>
+                </div>
+                <p style="color: #fff; font-weight: 800; font-size: 0.85rem; letter-spacing: 0.5px;">© 2026 WILDAN BALDI.</p>
+                <p style="color: var(--p); font-family: 'JetBrains Mono'; font-size: 0.7rem; margin-top: 5px; letter-spacing: 1px;">ALL RIGHTS RESERVED.</p>
+            </div>
+        </div>
+    </footer>
     <script>
         let dbProjects = [];
         async function syncMain() {
